[gd_scene load_steps=75 format=3 uid="uid://bm5dsqlvolerv"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_2r1ma"]
[ext_resource type="Script" path="res://player/AnimationPlayer.gd" id="3_d85x8"]
[ext_resource type="Texture2D" uid="uid://mp8r6pocs7o" path="res://assets/spritesheets/player/player_climb.png" id="3_djvil"]
[ext_resource type="Texture2D" uid="uid://mey4bujcswh6" path="res://assets/spritesheets/player/player_idle.png" id="4_n78wj"]
[ext_resource type="PackedScene" uid="uid://cbrwm75spq3an" path="res://player/TileDetector.tscn" id="4_wh0r1"]
[ext_resource type="PackedScene" uid="uid://c1yqi4yeohbec" path="res://player/speech_bubble/SpeechBubble.tscn" id="5_28vti"]
[ext_resource type="Texture2D" uid="uid://df2576x6y1b05" path="res://assets/spritesheets/player/player_roll.png" id="5_s1wfl"]
[ext_resource type="Texture2D" uid="uid://cqbeyncp834mm" path="res://assets/spritesheets/player.png" id="5_xg7ct"]
[ext_resource type="Texture2D" uid="uid://dvepsq1jty4r4" path="res://assets/spritesheets/player/player_run.png" id="6_v6ob8"]
[ext_resource type="Texture2D" uid="uid://bwdr1cvaxe22m" path="res://assets/spritesheets/player/player_slide.png" id="7_ouohe"]
[ext_resource type="Texture2D" uid="uid://cq8des0p7btv7" path="res://assets/spritesheets/player/player_walk.png" id="7_vwu4j"]
[ext_resource type="Script" path="res://machines/state machine/StateMachine.gd" id="12_7chlf"]
[ext_resource type="Script" path="res://machines/state machine/states/IdleState.gd" id="13_y7ds4"]
[ext_resource type="Script" path="res://machines/state machine/states/MoveState.gd" id="14_u66ym"]
[ext_resource type="Script" path="res://machines/state machine/states/ClimbState.gd" id="15_568s0"]
[ext_resource type="Script" path="res://machines/state machine/states/SlideState.gd" id="16_gkrci"]
[ext_resource type="Script" path="res://machines/state machine/states/RollState.gd" id="17_2kddk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_507og"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8aapq"]
radius = 4.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e2uyk"]
atlas = ExtResource("3_djvil")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj4i0"]
atlas = ExtResource("3_djvil")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obo7l"]
atlas = ExtResource("3_djvil")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftylu"]
atlas = ExtResource("3_djvil")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubohs"]
atlas = ExtResource("4_n78wj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnhio"]
atlas = ExtResource("4_n78wj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr8ea"]
atlas = ExtResource("4_n78wj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhatv"]
atlas = ExtResource("4_n78wj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1h4m"]
atlas = ExtResource("4_n78wj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3itnl"]
atlas = ExtResource("4_n78wj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2p1f"]
atlas = ExtResource("5_xg7ct")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4rqu"]
atlas = ExtResource("5_xg7ct")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m3au"]
atlas = ExtResource("5_xg7ct")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0rbe"]
atlas = ExtResource("5_xg7ct")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfjlv"]
atlas = ExtResource("5_s1wfl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5n58"]
atlas = ExtResource("5_s1wfl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryabn"]
atlas = ExtResource("5_s1wfl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4igi"]
atlas = ExtResource("5_s1wfl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqu2t"]
atlas = ExtResource("5_s1wfl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbpyd"]
atlas = ExtResource("5_s1wfl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_quiyt"]
atlas = ExtResource("6_v6ob8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p50ti"]
atlas = ExtResource("6_v6ob8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dty06"]
atlas = ExtResource("6_v6ob8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxfdd"]
atlas = ExtResource("6_v6ob8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7bub"]
atlas = ExtResource("6_v6ob8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egxxb"]
atlas = ExtResource("6_v6ob8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcuiy"]
atlas = ExtResource("6_v6ob8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jry0w"]
atlas = ExtResource("6_v6ob8")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmrg5"]
atlas = ExtResource("6_v6ob8")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7evey"]
atlas = ExtResource("6_v6ob8")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xgkq"]
atlas = ExtResource("7_ouohe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq5y5"]
atlas = ExtResource("7_ouohe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vyh1"]
atlas = ExtResource("7_ouohe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg5ag"]
atlas = ExtResource("7_ouohe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjbj"]
atlas = ExtResource("7_ouohe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv0ua"]
atlas = ExtResource("7_vwu4j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re07l"]
atlas = ExtResource("7_vwu4j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj6eu"]
atlas = ExtResource("7_vwu4j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlfqe"]
atlas = ExtResource("7_vwu4j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp3s3"]
atlas = ExtResource("7_vwu4j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlset"]
atlas = ExtResource("7_vwu4j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks34k"]
atlas = ExtResource("7_vwu4j")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ffv"]
atlas = ExtResource("7_vwu4j")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57bt0"]
atlas = ExtResource("7_vwu4j")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmpp2"]
atlas = ExtResource("7_vwu4j")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dyi5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2uyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj4i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obo7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftylu")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubohs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnhio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr8ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhatv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1h4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3itnl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2p1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4rqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m3au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0rbe")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfjlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5n58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryabn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4igi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqu2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbpyd")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quiyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p50ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dty06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxfdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7bub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egxxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcuiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jry0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmrg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7evey")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xgkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq5y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vyh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg5ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjbj")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv0ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re07l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj6eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlfqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp3s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlset")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks34k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ffv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmpp2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_067ri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_jm00u"]
resource_name = "climb"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"climb"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_t126l"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_cqdko"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_sodoe"]
resource_name = "roll"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"roll"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_kv8n2"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_6e76a"]
resource_name = "slide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"slide"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_k1hod"]
resource_name = "walk"
length = 1.5
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a38rr"]
_data = {
"RESET": SubResource("Animation_067ri"),
"climb": SubResource("Animation_jm00u"),
"fall": SubResource("Animation_t126l"),
"idle": SubResource("Animation_cqdko"),
"roll": SubResource("Animation_sodoe"),
"run": SubResource("Animation_kv8n2"),
"slide": SubResource("Animation_6e76a"),
"walk": SubResource("Animation_k1hod")
}

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 3
script = ExtResource("1_2r1ma")

[node name="TileDetector" parent="." instance=ExtResource("4_wh0r1")]
position = Vector2(0, -12)

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_507og")

[node name="PlayerHitArea" type="CollisionShape2D" parent="."]
position = Vector2(-2.08165e-12, -15)
shape = SubResource("CapsuleShape2D_8aapq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.08165e-12, -16)
sprite_frames = SubResource("SpriteFrames_dyi5b")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a38rr")
}
script = ExtResource("3_d85x8")

[node name="SpeechBubble" parent="." instance=ExtResource("5_28vti")]
offset_top = -72.0
offset_bottom = -39.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character")]
script = ExtResource("12_7chlf")
current_state = NodePath("Idle")
character = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("13_y7ds4")
anim_key = "idle"

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("14_u66ym")
anim_key = "walk"
fast_anim_key = "run"

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource("15_568s0")
anim_key = "climb"

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource("16_gkrci")
anim_key = "slide"

[node name="Roll" type="Node" parent="StateMachine"]
script = ExtResource("17_2kddk")
anim_key = "roll"

[connection signal="_tile_entered" from="TileDetector" to="." method="_on_tile_detector__tile_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
